[package]
name = "ericminassian"
version = "0.1.0"
edition = "2021"
authors = ["Eric Minassian <eric@ericminassian.com>"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -2 }
unwrap_used = { level = "deny", priority = -3 }
uninlined_format_args = "allow"

[dependencies]
dotenv = "0.15.0"
